fix the background color and border double border

--- a/openmetadata-ui/src/main/resources/ui/src/components/Settings/Users/users.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/Settings/Users/users.less
@@ -170,6 +170,13 @@
   }
 }
 
+.users-tabs-container {
+  .activity-feed-tab {
+    border: none;
+    border-radius: 0px;
+  }
+}
+
 .tab-label {
   color: @grey-13;
   font-size: 16px;
