--- a/openmetadata-ui/src/main/resources/ui/src/styles/components/tabs.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/components/tabs.less
@@ -78,6 +78,8 @@
 
   .ant-tabs-tabpane {
     margin-top: @padding-sm;
+    border-radius: @border-radius-sm;
+    background-color: @white;
   }
 
   .ant-tabs-ink-bar {
